tests/ui/const-generics/issues/issue-97278.stderr
error[E0741]: `Arc<i32>` must be annotated with `#[derive(PartialEq, Eq)]` to be used as the type of a const parameter
  --> $DIR/issue-97278.rs:11:20
   |
LL | fn test<const BAR: Bar>() {}
   |                    ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
